--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -58,6 +59,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.20",
+    "@types/uuid": "^8.3.4",
     "babel-plugin-styled-components": "^2.0.2"
   }
 }
